Update package.json metadata and add comprehensive README
- Updated package name to @chittyos/chittyassets
- Added proper description, keywords, and repository info
- Created comprehensive README with installation, API docs, and ChittyOS integration
- Documented environment variables and deployment options

--- a/package.json
+++ b/package.json
@@ -1,8 +1,26 @@
 {
-  "name": "rest-express",
+  "name": "@chittyos/chittyassets",
   "version": "1.0.0",
+  "description": "Blockchain-integrated asset management system for ChittyOS ecosystem with ownership proof, dashboard filtering, and multi-platform deployment",
   "type": "module",
   "license": "MIT",
+  "author": "ChittyOS Team",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chittyos/chittyassets"
+  },
+  "keywords": [
+    "chittyos",
+    "chittyassets",
+    "asset-management",
+    "blockchain",
+    "ownership-proof",
+    "dashboard",
+    "react",
+    "express",
+    "drizzle",
+    "neon"
+  ],
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
