--- a/package.json
+++ b/package.json
@@ -28,15 +28,25 @@
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "install-github-app": "node scripts/install-github-app.js",
-    "test:github-app": "node scripts/test-github-app.js"
+    "test:github-app": "node scripts/test-github-app.js",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:working": "vitest run server/__tests__/simple.test.ts server/__tests__/integration/api.test.ts client/src/__tests__/components/SimpleButton.test.tsx"
   },
   "dependencies": {
     "@anthropic-ai/claude-code": "^1.0.83",
     "@chittyapps/chittycloude-mcp": "^1.0.0",
+    "@clerk/backend": "^1.0.0",
+    "@clerk/clerk-react": "^5.0.0",
+    "@clerk/clerk-sdk-node": "^5.0.0",
+    "@clerk/express": "^1.0.0",
+    "@clerk/types": "^4.0.0",
     "@google-cloud/storage": "^7.16.0",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@neondatabase/serverless": "^0.10.4",
+    "@notionhq/client": "^2.2.14",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
@@ -92,12 +102,6 @@
     "next-themes": "^0.4.6",
     "openai": "^5.12.0",
     "openid-client": "^6.6.3",
-    "@clerk/clerk-sdk-node": "^5.0.0",
-    "@clerk/express": "^1.0.0",
-    "@clerk/backend": "^1.0.0",
-    "@clerk/types": "^4.0.0",
-    "@clerk/clerk-react": "^5.0.0",
-    "@notionhq/client": "^2.2.14",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -117,6 +121,10 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
@@ -127,14 +135,18 @@
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.18.1",
     "esbuild": "^0.25.0",
+    "jsdom": "^27.0.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
-    "vite": "^7.1.3"
+    "vite": "^7.1.3",
+    "vitest": "^3.2.4"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
